// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TicTacToe/Game All Triangle 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-13 {
  font-weight: bold;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 0"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 1"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 2"
          onClick={[Function]}
        >
          △
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 3"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 4"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 5"
          onClick={[Function]}
        >
          △
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 6"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 7"
          onClick={[Function]}
        >
          △
        </button>
        <button
          className="emotion-2"
          data-testid="square: 8"
          onClick={[Function]}
        >
          △
        </button>
      </div>
    </div>
    <div
      className="game-info"
    >
      <p
        className="emotion-13"
        data-testid="status"
      >
        Winner: △
      </p>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-13 {
  font-weight: bold;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 0"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 1"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 2"
          onClick={[Function]}
        >
          
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 3"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 4"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 5"
          onClick={[Function]}
        >
          
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 6"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 7"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 8"
          onClick={[Function]}
        >
          
        </button>
      </div>
    </div>
    <div
      className="game-info"
    >
      <p
        className="emotion-13"
        data-testid="status"
      >
        Next Player: X
      </p>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Draw 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-13 {
  font-weight: bold;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 0"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="emotion-2"
          data-testid="square: 1"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="emotion-2"
          data-testid="square: 2"
          onClick={[Function]}
        >
          O
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 3"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="emotion-2"
          data-testid="square: 4"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="emotion-2"
          data-testid="square: 5"
          onClick={[Function]}
        >
          X
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 6"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="emotion-2"
          data-testid="square: 7"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="emotion-2"
          data-testid="square: 8"
          onClick={[Function]}
        >
          X
        </button>
      </div>
    </div>
    <div
      className="game-info"
    >
      <p
        className="emotion-13"
        data-testid="status"
      >
        Draw
      </p>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Win O 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-13 {
  font-weight: bold;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 0"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="emotion-2"
          data-testid="square: 1"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="emotion-2"
          data-testid="square: 2"
          onClick={[Function]}
        >
          O
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 3"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 4"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 5"
          onClick={[Function]}
        >
          
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 6"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 7"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 8"
          onClick={[Function]}
        >
          
        </button>
      </div>
    </div>
    <div
      className="game-info"
    >
      <p
        className="emotion-13"
        data-testid="status"
      >
        Winner: O
      </p>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Win X 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-13 {
  font-weight: bold;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 0"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="emotion-2"
          data-testid="square: 1"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="emotion-2"
          data-testid="square: 2"
          onClick={[Function]}
        >
          X
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 3"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 4"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 5"
          onClick={[Function]}
        >
          
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="square: 6"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 7"
          onClick={[Function]}
        >
          
        </button>
        <button
          className="emotion-2"
          data-testid="square: 8"
          onClick={[Function]}
        >
          
        </button>
      </div>
    </div>
    <div
      className="game-info"
    >
      <p
        className="emotion-13"
        data-testid="status"
      >
        Winner: X
      </p>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Square Default 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Storyshots TicTacToe/Square O 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  >
    O
  </button>
</div>
`;

exports[`Storyshots TicTacToe/Square X 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  >
    X
  </button>
</div>
`;
